# final_project_asr

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
bt/: pc.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/depth_worker/lib/depth_worker/: detection_2d_to_3d_depth  detection_2d_to_3d_pc2  hsv_filter  yolo_detection  yolo_parser
install/depth_worker/share/depth_worker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/depth_worker/share/depth_worker/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  depth_workerConfig-version.cmake  depth_workerConfig.cmake
install/depth_worker/share/depth_worker/config/: params.yaml
install/depth_worker/share/depth_worker/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/depth_worker/share/depth_worker/launch/: camera.launch.py  detection3d_hsv.launch.py  detection3d_yolo.launch.py  follow_person_yolo.launch.py  yolo_detection.launch.py
install/elp_stereo_camera/lib/elp_stereo_camera/: stereo_camera_node  stereo_point_cloud_generator
install/elp_stereo_camera/share/elp_stereo_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/elp_stereo_camera/share/elp_stereo_camera/cmake/: elp_stereo_cameraConfig-version.cmake  elp_stereo_cameraConfig.cmake
install/elp_stereo_camera/share/elp_stereo_camera/config/: supported_formats.txt
install/elp_stereo_camera/share/elp_stereo_camera/environment/: ament_prefix_path.dsv  path.dsv
install/elp_stereo_camera/share/elp_stereo_camera/launch/: pc.launch.py  stereo_camera_launch.py
install/yolo_bringup/share/yolo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/yolo_bringup/share/yolo_bringup/cmake/: yolo_bringupConfig-version.cmake  yolo_bringupConfig.cmake
install/yolo_bringup/share/yolo_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/yolo_bringup/share/yolo_bringup/launch/: yolo-nas.launch.py  yolo-world.launch.py  yolo.final.launch.py  yolo.sim.launch.py  yolov10.launch.py  yolov11.launch.py  yolov5.launch.py  yolov8.launch.py  yolov9.launch.py
install/yolo_msgs/share/yolo_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/yolo_ros/share/yolo_ros/: package.sh  package.xml
log/: latest_build
map/: map_1744189544.pgm  map_1744189544.yaml
maps/: manza.pgm  manza.yaml
scripts/: backup_pub.sh
src/PARTE_NAVEGACION_PROYECTO_FINAL/interfaces_final/: package.xml
src/PARTE_NAVEGACION_PROYECTO_FINAL/interfaces_final/action/: Muevete.action
src/PARTE_NAVEGACION_PROYECTO_FINAL/progrma/: CMakeLists.txt  package.xml
src/PARTE_NAVEGACION_PROYECTO_FINAL/progrma/include/server/: ActionClient.hpp  ActionServer.hpp
src/PARTE_NAVEGACION_PROYECTO_FINAL/progrma/src/: action_client_main.cpp  action_server_main.cpp
src/PARTE_NAVEGACION_PROYECTO_FINAL/progrma/src/server/: ActionClient.cpp  ActionServer.cpp
src/depth_worker/: CMakeLists.txt  package.xml
src/depth_worker/config/: params.yaml
src/depth_worker/include/depth_worker/: DetectionTo3DfromPCNode.hpp  YoloDetectionNode.hpp  YoloParserNode.hpp
src/depth_worker/launch/: detection3d_yolo.launch.py  yolo_detection.launch.py
src/depth_worker/src/: detection_2d_to_3d_pc2_main.cpp  yolo_detection_main.cpp  yolo_parser.cpp
src/depth_worker/src/depth_worker/: DetectionTo3DfromPCNode.cpp  YoloDetectionNode.cpp  YoloParserNode.cpp
src/elp_stereo_camera/: CMakeLists.txt  LICENSE  README.md  package.xml
src/elp_stereo_camera/cam_params/1280_480/: left_camera.yaml  left_camera_GS.yaml  right_camera.yaml  right_camera_GS.yaml
src/elp_stereo_camera/cam_params/1600_600/: left_camera.yaml  left_camera_GS.yaml  right_camera.yaml  right_camera_GS.yaml
src/elp_stereo_camera/config/: supported_formats.txt
src/elp_stereo_camera/launch/: final.camera.launch.py  pc.launch.py  stereo_camera_launch.py
src/elp_stereo_camera/src/: stereo_calibrator.py  stereo_camera_node.cpp  stereo_point_cloud_generator.cpp  tf.cpp
src/hri/launch/: hri_dependencies.launch.py
src/interfaces_final/: CMakeLists.txt
src/nav_pruebas/: CMakeLists.txt  package.xml
src/nav_pruebas/include/nav_pruebas/: DestinationParserNode.hpp
src/nav_pruebas/src/: destination_parser.cpp
src/nav_pruebas/src/nav_pruebas/: DestinationParserNode.cpp
src/navigation/: README.md
src/navigation/navigation/: CMakeLists.txt
src/navigation/navigation/src/: action_client_main.cpp  action_server_main.cpp
src/navigation/navigation_interfaces/: CMakeLists.txt
src/navigation_robot/: CMakeLists.txt  package.xml
src/navigation_robot/include/navigation_robot/: ActionClient.hpp  ActionServer.hpp  DestinationParserNode.hpp
src/navigation_robot/src/: action_client_main.cpp  action_server_main.cpp  destination_parser.cpp
src/navigation_robot/src/navigation_robot/: ActionClient.cpp  ActionServer.cpp  DestinationParserNode.cpp
src/pfinal_pc/: CMakeLists.txt  package.xml
src/pfinal_pc/bt_xml/: btree.xml
src/pfinal_pc/include/pfinal_pc/: AskForDestinationNode.hpp  CheckPerson.hpp  WaitForRobotNode.hpp
src/pfinal_pc/launch/: final.launch.py
src/pfinal_pc/src/: checkperson_main.cpp
src/pfinal_pc/src/pfinal_pc/: AskForDestinationNode.cpp  CheckPerson.cpp  WaitForRobotNode.cpp
src/pruebas_nav/: package.xml
src/pruebas_nav/include/server/: ActionClient.hpp  ActionServer.hpp
src/pruebas_nav/src/: action_client_main.cpp  action_server_main.cpp
src/pruebas_nav/src/server/: ActionClient.cpp  ActionServer.cpp
src/yolov8_ros/yolo_bringup/launch/: yolo.final.launch.py  yolo.sim.launch.py
src/yolov8_ros/yolo_ros/yolo_ros/: debug_node.py  detect_3d_node.py  tracking_node.py  yolo_node.py
(+248 files in other folders)
