<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elp_stereo_camera</name>
  <version>0.0.0</version>
  <description>Package for stereo camera processing and point cloud generation.</description>
  <maintainer email="engemannheiko@gmail.com">heiko</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- Point Cloud Library (PCL) dependencies -->
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
