<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pfinal_pc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="c.elez.2023@alumnos.urjc.es">claudia-elez</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>hri_bt_nodes</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
