<?xml version="1.0"?>
<package format="3">
  <name>pruebas_nav</name>
  <version>0.0.0</version>
  <description>Pruebas de navegación con mapa</description>
  <maintainer email="c.garciaes.2023@alumnos.urjc.es">Carlos García</maintainer>
  <license>MIT Licnse</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interfaces_final</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

